feat: add automatic language selection based on guest preferences
Add support for per-guest language preferences in invitation system. Includes:

- Automatic language switching based on guest data `lang` field
- Language selector updates to reflect guest's preferred language
- Validation for supported language codes (en, pt, no)
- Seamless integration with existing language switcher

--- a/invitations/index.html
+++ b/invitations/index.html
@@ -112,6 +112,11 @@
           </div>
         `;
       } else if (guestData) {
+        // Use guest's preferred language
+        if (guestData.lang && ['en', 'pt', 'no'].includes(guestData.lang)) {
+          currentLang = guestData.lang;
+          document.getElementById('langSelect').value = currentLang;
+        }
         content.innerHTML = `
           <h1 class="guest-name">${guestData.name}</h1>
           <p class="invitation-text">${guestData.text}</p>
